通用库新增观察者

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .swiftpm/xcode/package.xcworkspace/xcuserdata/xiehongbiao.xcuserdatad/UserInterfaceState.xcuserstate
 .swiftpm/xcode/xcuserdata/xiehongbiao.xcuserdatad/xcschemes/xcschememanagement.plist
 .DS_Store
+.swiftpm/xcode/package.xcworkspace/xcuserdata/cc.xcuserdatad/UserInterfaceState.xcuserstate
